[package]
name = "spsolve"
version = "0.1.0"
description = "Solve sparse systems of linear equations"
edition = "2021"

[dependencies]
anyhow = "1"

rlu = { version = "0.4", optional = true }
amd = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }

lufact = { version = "0.1.2", optional = true }

suitesparse_sys = { version = "0.1", optional = true }

[dev-dependencies]
num-traits = "0.2"

[features]
rlu = ["dep:amd", "dep:rlu", "num-traits"]
lufact = ["suitesparse_sys/amd", "dep:lufact"]
klu = ["suitesparse_sys/klu"]

[[example]]
name = "solve"
required-features = ["rlu", "lufact", "klu"]
